istio/ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.<Ingress Subdomain>"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice
spec:
  hosts:
  - "*.<Ingress Subdomain>"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /shop
    route:
    - destination:
        port:
          number: 9080
        host: jpetstore
---
